# arandu-repro

./: .gitignore  AGENTS.md  CI_FIXES_SUMMARY.md  CI_STATUS_REPORT.md  CI_VERIFICATION.md  DEMO_LOCAL.md  HYPOTHESIS_ANALYSIS.md  PR_COMMENTS_ANALYSIS.md  PR_READY_CHECKLIST.md  PR_SUMMARY.md  README.md  SPRINT2_STATUS.md  TEST_REPORT.md  arandu-repro-v0-engineering-plan.plan.md  start-demo.sh
backend/: .env.bak  .gitignore  Dockerfile  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt  test_endpoints.sh
backend/alembic/: env.py
backend/alembic/versions/: 88227060e57c_initial_migration_create_jobs_runs_.py  a1b2c3d4e5f6_add_papers_table.py  b2c3d4e5f6a7_add_paper_versions_table.py  c3d4e5f6a7b8_add_paper_external_ids_table.py  d4e5f6a7b8c9_add_quality_scores_table.py  dec04362e66d_add_reviews_table.py  e5f6a7b8c9d0_add_claims_table.py  f6a7b8c9d0e1_add_claim_links_table.py  g7h8i9j0k1l2_enable_pg_trgm.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/routes/: badges.py  jobs.py  metrics.py  papers.py  reviews.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  artifact.py  claim.py  claim_link.py  enums.py  job.py  paper.py  paper_external_id.py  paper_version.py  quality_score.py  review.py  run.py
backend/app/schemas/: __init__.py  artifact.py  claim.py  claim_link.py  job.py  paper.py  paper_external_id.py  paper_version.py  quality_score.py  review.py
backend/app/utils/: errors.py  logging.py  metrics.py  pdf_validator.py  storage.py
backend/app/worker/: __init__.py  __main__.py  artifact_generator.py  badge_generator.py  checklist_generator.py  citation_suggester.py  claim_extractor.py  docker_builder.py  env_detector.py  executor.py  llm_client.py  main.py  repo_cloner.py  report_builder.py  review_ingestion.py  review_pipeline.py  review_pipeline_nodes.py  review_processor.py  review_state.py  review_tasks.py  section_segmenter.py  tasks.py
backend/app/worker/quality/: __init__.py  feature_builder.py  predictor.py  score_narrator.py  shap_explainer.py
backend/app/worker/rag/: __init__.py  bm25_index.py  embeddings.py  reranker.py  (+1 more)
backend/scripts/: test_postgres_local.sh
backend/tests/: __init__.py  conftest_papers.py  test_badge_generator.py  test_checklist_generator.py  test_claim_extractor.py  test_concurrency.py  test_conditional_rules.py  test_docker_builder.py  test_e2e_smoke.py  test_env_detector.py  test_executor.py  test_health.py  test_hypotheses_e2e.py  test_hypothesis_import_caching_real.py  test_jobs.py  test_langgraph_pipeline.py  test_llm_client.py  test_metrics.py  test_migrations_papers.py  test_models_papers.py  test_rag_pipeline.py  test_repo_cloner.py  test_review_ingestion.py  test_section_segmenter.py  test_security_hardening.py  test_storage_permissions.py
backend/tests/api/: test_papers_api.py
backend/tests/integration/: __init__.py  test_e2e_pipeline.py  test_langgraph_full_pipeline.py  test_langgraph_llm_integration.py  test_review_e2e.py
(+59 files in other folders)
