[project]
name = "arandu-repro-backend"
version = "0.1.0"
description = "Arandu Repro v0 - Backend service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "redis>=5.0.0",
    "rq>=1.15.0",
    "psycopg2-binary>=2.9.9",
    "GitPython>=3.1.40",
    "pyyaml>=6.0.1",
    "tomli>=2.0.1",
    "docker>=6.1.0",
    "pymupdf>=1.23.0",  # PDF parsing
    "sentence-transformers>=2.2.0",  # Embeddings for RAG
    "whoosh>=2.7.4",  # BM25 search
    "scikit-learn>=1.3.0",  # ML models
    "shap>=0.43.0",  # SHAP explanations
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "ruff>=0.1.6",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "E402", "F821", "I001"]  # E402: TYPE_CHECKING, F821: forward references, I001: import sorting (handled by isort)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
asyncio_mode = "auto"

